# libnice

./: .gitignore  Makefile.am  autogen.sh  common.mk  config.h.in  configure.ac  meson.build  wscript_build
agent/: Makefile.am  address.c  address.h  agent-priv.h  agent-signals-marshal.c  agent-signals-marshal.h  agent-signals-marshal.list  agent.c  agent.h  candidate.c  candidate.h  component.c  component.h  conncheck.c  conncheck.h  debug.c  debug.h  discovery.c  discovery.h  interfaces.c  interfaces.h  main_loop_thread.c  main_loop_thread.h  meson.build  stream.c  stream.h
common-modified/: gst-glib-gen.mak
docs/reference/libnice/: Makefile.am  libnice-docs.sgml  libnice-sections.txt  libnice.types
docs/reference/libnice/tmpl/: agent.sgml
gst/: Makefile.am  gstnice.c  gstnicecoordinator.c  gstnicecoordinator.h  gstnicesink.c  gstnicesink.h  gstnicesrc.c  gstnicesrc.h  meson.build
nice/: Makefile.am  libnice.sym  memlist.h  meson.build  nice.h  niceconfig.h
python/: Makefile.am  pylibnice-filter.defs  pylibnice.defs  pylibnice.override  pylibnicemodule.c  rebuild-defs.sh
random/: meson.build
socket/: Makefile.am  http.c  meson.build  pseudossl.c  socket.c  socket.h  socks5.c  tcp-active.c  tcp-active.h  tcp-bsd.c  tcp-bsd.h  tcp-established.c  tcp-established.h  tcp-passive.c  tcp-passive.h  tcp-so.c  tcp-so.h  tcp-turn.c  turn.c  turn.h  udp-bsd.c  udp-bsd.h
stun/: Makefile.am  constants.h  debug.c  debug.h  meson.build  sha1.c  sha1.h  stunagent.c  stunagent.h  stunhmac.c  stunmessage.c  stunmessage.h  utils.c  utils.h  win32_common.h
stun/tools/: Makefile.am
stun/usages/: bind.c  ice.c  turn.c  turn.h
tests/: Makefile.am  test-fullmode.c  test-tcp.c
